<resources>
    <string name="app_name">Walmart</string>
    <string name="sign_in_title">Sign in to your account</string>
    <string name="email">Email address (required) </string>
    <string name="password">Password (required) </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="create">Create a new account</string>
    <string name="shop_by_catagory">Shop by Catagory</string>
    <string name="electronics">Electronics</string>
    <string name="clothing">Clothing</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="register_tittle">Create your account</string>
    <string name="required_field">* required field</string>
    <string name="first_name">First name *</string>
    <string name="last_name">Last name *</string>
    <string name="email_reg">Email address *</string>
    <string name="password_reg">Password *</string>
    <string name="create_reg">Create Account</string>

    <string name="description1">Introducing the RCA Voyager 7-inch Google Certified Tablet.
        Operating on Android\'s sweetest operating system yet, Android 6.0 (Marshmallow),
        you can enjoy more of what the Google Play store has to offer.</string>
    <string name="description2">Introducing the RCA Voyager 7-inch Google Certified Tablet.
        Operating on Android\'s sweetest operating system yet, Android 6.0 (Marshmallow),
        you can enjoy more of what the Google Play store has to offer</string>
    <string name="description3">Introducing the RCA Voyager 7-inch Google Certified Tablet.
        Operating on Android\'s sweetest operating system yet, Android 6.0 (Marshmallow),
        you can enjoy more of what the Google Play store has to offer</string>
    <string name="description4">Introducing the RCA Voyager 7-inch Google Certified Tablet.
        Operating on Android\'s sweetest operating system yet, Android 6.0 (Marshmallow),
        you can enjoy more of what the Google Play store has to offer</string>

    <string name="walmart_number">Walmart Number: 1231</string>

    <string name="detail_description">Item Description:\n</string>
    <string name="divider">divider</string>

</resources>